// Code generated by sqlc. DO NOT EDIT.
// versions:
//   sqlc v1.18.0

package db

import (
	"time"
)

type Company struct {
	ID       int32  `json:"id"`
	Name     string `json:"name"`
	Industry string `json:"industry"`
	Location string `json:"location"`
}

type Employer struct {
	ID             int32     `json:"id"`
	CompanyID      int32     `json:"company_id"`
	FullName       string    `json:"full_name"`
	Email          string    `json:"email"`
	HashedPassword string    `json:"hashed_password"`
	CreatedAt      time.Time `json:"created_at"`
}

type Job struct {
	ID           int32     `json:"id"`
	Title        string    `json:"title"`
	Industry     string    `json:"industry"`
	CompanyID    int32     `json:"company_id"`
	Description  string    `json:"description"`
	Location     string    `json:"location"`
	SalaryMin    int32     `json:"salary_min"`
	SalaryMax    int32     `json:"salary_max"`
	Requirements string    `json:"requirements"`
	CreatedAt    time.Time `json:"created_at"`
}

type JobSkill struct {
	ID    int32  `json:"id"`
	JobID int32  `json:"job_id"`
	Skill string `json:"skill"`
}

type User struct {
	ID               int32     `json:"id"`
	FullName         string    `json:"full_name"`
	Email            string    `json:"email"`
	HashedPassword   string    `json:"hashed_password"`
	Location         string    `json:"location"`
	DesiredJobTitle  string    `json:"desired_job_title"`
	DesiredIndustry  string    `json:"desired_industry"`
	DesiredSalaryMin int32     `json:"desired_salary_min"`
	DesiredSalaryMax int32     `json:"desired_salary_max"`
	Skills           string    `json:"skills"`
	Experience       string    `json:"experience"`
	CreatedAt        time.Time `json:"created_at"`
}

type UserSkill struct {
	ID         int32  `json:"id"`
	UserID     int32  `json:"user_id"`
	Skill      string `json:"skill"`
	Experience int32  `json:"experience"`
}
